@@ -166,7 +166,7 @@ class PeersTab(Tab):
         state = {
             "columns": {},
             "sort_id": column_id,
-            "sort_order": int(sort_order)
+            "sort_order": int(sort_order) if sort_order else None
         }
 
         for index, column in enumerate(self.listview.get_columns()):
@@ -207,7 +207,7 @@ class PeersTab(Tab):
             log.warning("peers_tab.state is not compatible! rejecting..")
             return
 
-        if state["sort_id"] and state["sort_order"]:
+        if state["sort_id"] and state["sort_order"] is not None:
             self.liststore.set_sort_column_id(state["sort_id"], state["sort_order"])
 
         for (index, column) in enumerate(self.listview.get_columns()):
@@ -216,7 +216,7 @@ class PeersTab(Tab):
                 cstate = state["columns"][cname]
                 column.set_sizing(gtk.TREE_VIEW_COLUMN_FIXED)
                 column.set_fixed_width(cstate["width"] if cstate["width"] > 0 else 10)
-                if state["sort_id"] == index:
+                if state["sort_id"] == index and state["sort_order"] is not None:
                     column.set_sort_indicator(True)
                     column.set_sort_order(state["sort_order"])
                 if cstate["position"] != index:
